syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.yelixian.beiqi.proto";
option java_outer_classname = "StatusReplyProto";
option objc_class_prefix = "BQ";

package beiqi;

//只包含处理状态的response
message StatusReply {
    //处理状态
    int32 status = 1;
    //错误码
    int32 err_code = 2;
    //错误信息
    string err_message = 3;
}
